tests/integration/fail/records/merge_nested_different_vals_prio_0.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::MergeIncompatibleArgs'
({ a.b | priority 0 = 1, a = { b = 2 }}).a.b